compiler/tests/fail/x86-64/invalid_store_align.jazz
export fn store_vmovdqa(reg u64 p, reg u128 v) {
  [:u128 p] = #VMOVDQA_128(v);
}
